
[metadata]
name = pytest-sunpy
version = 1.0.0
description = Meta-package containing dependencies for the SunPy test suite.
long_description = file:README.rst
author = The SunPy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause License
url = https://sunpy.org
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Testing
    Topic :: Utilities
[options]
zip_safe = False
packages = find:
install_requires =
    pytest-astropy
    hypothesis
    pytest-cov
    pytest-mock
    pytest-rerunfailures
    pytest-xdist
